# graphics-programming-2021

./: .gitignore
assignments/: CMakeLists.txt
assignments/voronoi/: main.cpp
assignments/voronoi/shaders/: color.frag  distance_color.frag  shader.vert
assignments/weather_effects/: main.cpp
assignments/weather_effects/shaders/: rainShader.frag  rainShader.vert
exercises/exercise_1/exercise_1_1_and_1_2/: main.cpp
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_2/exercise_2_1/: main.cpp  shader_s.h
exercises/exercise_2/exercise_2_2_to_2_7/: main.cpp
exercises/exercise_2/exercise_2_2_to_2_7/shaders/: shader.frag
exercises/exercise_3/exercise_3/: main.cpp
